clang/test/BSC/Negative/Method/definition_2/definition_2.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

int struct Foo::getA() { // expected-error {{variable has incomplete type 'struct Foo'}}
  return 0;
}

int main() {
  return 0;
}
